--- a/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
+++ b/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectTests.cs" />
+    <Compile Include="WhereTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
