--- a/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
+++ b/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GroupByTests.cs" />
+    <Compile Include="HavingTests.cs" />
+    <Compile Include="OrderByTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectTests.cs" />
     <Compile Include="WhereTests.cs" />
