--- a/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
+++ b/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AliasTests.cs" />
+    <Compile Include="FullQueriesTests.cs" />
     <Compile Include="GroupByTests.cs" />
     <Compile Include="HavingTests.cs" />
+    <Compile Include="InStatementTests.cs" />
+    <Compile Include="JoinTests.cs" />
     <Compile Include="OrderByTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectTests.cs" />
