--- a/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
+++ b/TSqlBuilder.Tests/TSqlBuilder.Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AliasTests.cs" />
+    <Compile Include="DeleteStatement\SimpleDeleteTests.cs" />
     <Compile Include="FullQueriesTests.cs" />
     <Compile Include="GroupByTests.cs" />
     <Compile Include="HavingTests.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="OrderByTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectTests.cs" />
+    <Compile Include="UpdateStatement\SimpleUpdateTests.cs" />
     <Compile Include="WhereTests.cs" />
   </ItemGroup>
   <ItemGroup>
