--- a/TSqlBuilder/TSqlBuilder.csproj
+++ b/TSqlBuilder/TSqlBuilder.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Delete.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Select.cs" />
+    <Compile Include="Update.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
